# clars

./: Cargo.toml  README.md  Taskfile.yml  rustfmt.toml
.github/workflows/: build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos.yml  build-windows.yml
docs/: CLI_ITEMS.md  README.md
examples/: sedi.rs
src/: display.rs  errors.rs  evaluator.rs  helpers.rs  lexer.rs  lib.rs  matches.rs  messages.rs  model.rs  parser.rs  path.rs  resolver.rs
tests/: mod.rs  test_helpers.rs  test_lexer.rs  test_model.rs  test_parser.rs
tests/arguments/: mod.rs
tests/arguments/one_argument/: mod.rs  one_argument.md
tests/arguments/terminator/: mod.rs
tests/arguments/two_arguments/: mod.rs  two_arguments.md
tests/command/: mod.rs
tests/command/arguments/: mod.rs
tests/command/options/: mod.rs
tests/command/terminator/: mod.rs
tests/commands/: mod.rs  option_commands.rs  test_sub_subcommands.rs  test_subcommand_help.rs  test_subcommands.rs
tests/empty/: mod.rs
tests/helpers/: mod.rs
tests/lexer/: mod.rs
tests/matches/: mod.rs  test_matches_argument.rs  test_matches_option.rs  test_matches_subcommand.rs
tests/messages/: argument.rs  command.rs  mod.rs  options.rs  terminator.rs  validations.rs
tests/options/: mod.rs
tests/options/arguments/: mod.rs
tests/options/options_terminator/: mod.rs
tests/subcommands/: mod.rs  test_sub_subcommands.rs  test_subcommand_help.rs  test_subcommands.rs
tests/terminator/: mod.rs
tests/use_cases/: mod.rs
tests/use_cases/single_argument/: mod.rs  uc_single_argument.md  uc_single_argument.rs
(+6 files in other folders)
